--- a/algorithm_iteration1.ipynb
+++ b/algorithm_iteration1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -387,7 +387,7 @@
        "'inputs = [sat_reading, sat_writing, sat_math, pref_major, race_diversity, public_private, popul, pay]\\nsat_reading = Input SAT Reading Score (integer)\\nsat_writing = Input SAT Writing Score (integer)\\nsat_math = Input SAT Math Score (Integer)\\npref_major = Type in string for desired major\\nrace_diversity = Input [0,1,2] For Low, Medium, High\\npublic_private = Input [0,1] for Public, Private\\npopul = Input [0,1,2] For Low, Medium, High\\npay = Input [0,1,2] For Low, Medium, High\\n'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,7 +408,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def each_sat(score, column, collegelist, percentile):\n",
+    "    filteredlist = []\n",
+    "    \n",
+    "    if percentile == 25:\n",
+    "        for i in collegelist:\n",
+    "            if score >= train[column][i]-50:\n",
+    "                filteredlist.append(i)\n",
+    "    \n",
+    "    if percentile == 75:\n",
+    "        for i in collegelist:\n",
+    "            if score <= train[column][i]+50:\n",
+    "                filteredlist.append(i)\n",
+    "        \n",
+    "    return filteredlist\n",
+    "\n",
+    "def section_sat(score, section, collegelist):\n",
+    "    \"\"\"\n",
+    "    section = 'VR' or 'WR' or 'MT'\n",
+    "    \"\"\"\n",
+    "    column25 = 'SAT'+section+'25'\n",
+    "    column75 = 'SAT'+section+'75'\n",
+    "    \n",
+    "    list25 = each_sat(score, column25, collegelist, 25)\n",
+    "    list75 = each_sat(score, column75, list25, 75)\n",
+    "    \n",
+    "    return list75\n",
+    "\n",
+    "def sat(vrscore, wrscore, mtscore, collegelist):\n",
+    "    \"\"\"\n",
+    "    vrscore: reading score (int)\n",
+    "    wrscore: writing score (int)\n",
+    "    mtscore: math score (int)\n",
+    "    collegelist (list)\n",
+    "    \"\"\"\n",
+    "    listvr = section_sat(vrscore, 'VR', collegelist)\n",
+    "    listwr = section_sat(wrscore, 'WR', listvr)\n",
+    "    listmt = section_sat(mtscore, 'MT', listwr)\n",
+    "    \n",
+    "    return listmt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "allcollegelist = []\n",
+    "for i in range(len(train)):\n",
+    "    allcollegelist.append(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
@@ -417,27 +479,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "350.0 350\n",
-      "520.0 520\n",
-      "nan"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "index -9223372036854775808 is out of bounds for axis 0 with size 7804",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-10-bd592b263fdb>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mrow\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mtrain\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'SATMT25'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m     \u001b[1;32mprint\u001b[0m \u001b[0mrow\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtrain\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mrow\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m/home/tj/anaconda2/lib/python2.7/site-packages/pandas/core/index.pyc\u001b[0m in \u001b[0;36m__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   1147\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1148\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0misscalar\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1149\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mgetitem\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1150\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1151\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mslice\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mIndexError\u001b[0m: index -9223372036854775808 is out of bounds for axis 0 with size 7804"
+      "California Institute of Technology\n",
+      "Harvey Mudd College\n",
+      "Pomona College\n",
+      "Yale University\n",
+      "University of Chicago\n",
+      "Northwestern University\n",
+      "Bowdoin College\n",
+      "Amherst College\n",
+      "Harvard University\n",
+      "Massachusetts Institute of Technology\n",
+      "Tufts University\n",
+      "Wellesley College\n",
+      "Williams College\n",
+      "Carleton College\n",
+      "Washington University in St Louis\n",
+      "Dartmouth College\n",
+      "Princeton University\n",
+      "Columbia University in the City of New York\n",
+      "Duke University\n",
+      "University of Pennsylvania\n",
+      "Swarthmore College\n",
+      "Brown University\n",
+      "Vanderbilt University\n",
+      "Rice University\n",
+      "Stanford University\n",
+      "Franklin W Olin College of Engineering\n"
      ]
     }
    ],
    "source": [
-    "for row in train['SATMT25']:\n",
-    "    print row, train.index[row]"
+    "collegelist = sat(800,800,800,allcollegelist)\n",
+    "for i in collegelist:\n",
+    "        print train['INSTNM'][i]"
    ]
   },
   {
