finished alg methods

--- a/algorithm_iteration1_1.ipynb
+++ b/algorithm_iteration1_1.ipynb
@@ -402,8 +402,9 @@
     "pref_major = Type in string for desired major\n",
     "    % Major exceeds at least 5%\n",
     "\n",
-    "pay = Input [0,1,2] For Low, Medium, High\n",
-    "    \n",
+    "pay = Input Integer for Maximum wanted to pay\n",
+    "    +- 5000\n",
+    "        \n",
     "\n",
     "race_diversity = Input [0,1,2] For Low, Medium, High\n",
     "    greatest population is\n",
