all functions written

--- a/algorithm_iteration1_1.ipynb
+++ b/algorithm_iteration1_1.ipynb
@@ -402,16 +402,18 @@
     "\n",
     "pref_major = Type in string for desired major\n",
     "    % Major exceeds at least 5%\n",
+    "DONE\n",
     "\n",
     "pay = Input Integer for Maximum wanted to pay\n",
     "    +- 5000\n",
     "        \n",
-    "\n",
+    "        \n",
     "race_diversity = Input [0,1,2] For Low, Medium, High\n",
     "    greatest population is\n",
-    "    Low one popul is over 0.6\n",
-    "    Middle one population is not over 0.6\n",
-    "    Low one population is not over 0.4\n",
+    "    Low one popul is over 0.7\n",
+    "    Middle the rest\n",
+    "    High all population is not over 0.35\n",
+    "DONE\n",
     "\n",
     "public_private = Input [0,1,2] for Both, Public, Private\n",
     "    Check if NPT4_PUB is null or not\n",
@@ -419,13 +421,14 @@
     "    \n",
     "    If both null, output neither, include in list\n",
     "    If one exists, it is either public or private\n",
+    "    DONE\n",
     "    \n",
     "popul = Input [0,1,2] For Low, Medium, High\n",
     "    UGDS\n",
     "    small < 5000\n",
     "    medium, 5000 < x < 15000\n",
     "    big > 15000\n",
-    "\n",
+    "DONE\n",
     "\n",
     "\"\"\"\n",
     "\n"
