--- a/algorithm_iteration1_2.ipynb
+++ b/algorithm_iteration1_2.ipynb
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -160,13 +160,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "# private colleges: 4753\n",
-      "# public colleges: 1923\n",
-      "# all colleges: 7804\n"
+      "7804 1923 4753\n"
      ]
     }
    ],
    "source": [
+    "\"\"\"\n",
     "#Creating lists with id of private college and public college\n",
     "privatecollege = []\n",
     "publiccollege = []\n",
@@ -175,10 +174,61 @@
     "        publiccollege.append(i)\n",
     "    if str(college['NPT4_PRIV'][i]) != 'nan':\n",
     "        privatecollege.append(i)\n",
+    "\"\"\"\n",
     "        \n",
+    "def public_private(collegelist, preference):\n",
+    "    output_list = []\n",
+    "    if preference == 0: # Both Types\n",
+    "        output_list = collegelist\n",
+    "    if preference == 1: # Public College\n",
+    "        for i in collegelist:\n",
+    "            if str(college['NPT4_PUB'][i]) != 'nan':\n",
+    "                output_list.append(i)\n",
+    "    if preference == 2: # Private College\n",
+    "        for i in collegelist:\n",
+    "            if str(college['NPT4_PRIV'][i]) != 'nan':\n",
+    "                output_list.append(i)\n",
+    "    return output_list\n",
+    "\n",
+    "\"\"\"\n",
     "print '# private colleges:', len(privatecollege)\n",
     "print '# public colleges:', len(publiccollege)\n",
-    "print '# all colleges:', len(allcollegelist)"
+    "print '# all colleges:', len(allcollegelist)\n",
+    "\"\"\"\n",
+    "\n",
+    "print len(public_private(allcollegelist, 0)), len(public_private(allcollegelist, 1)),len(public_private(allcollegelist, 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3252\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "filters out based on how much people want to pay\n",
+    "\"\"\"\n",
+    "\n",
+    "def cost(collegelist, max_cost):\n",
+    "    output_list = []\n",
+    "    for i in collegelist:\n",
+    "        if college['NPT4_PUB'][i] < max_cost + 5000:\n",
+    "            output_list.append(i)\n",
+    "        if college['NPT4_PRIV'][i] < max_cost + 5000:\n",
+    "            output_list.append(i)\n",
+    "    return output_list\n",
+    "\n",
+    "print len(cost(allcollegelist, 10000))"
    ]
   },
   {
@@ -319,6 +369,25 @@
     "                    filteredlist.append(i)\n",
     "    \n",
     "    return filteredlist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "public_private = Input [0,1,2] for Both, Public, Private\n",
+    "    Check if NPT4_PUB is null or not\n",
+    "    Check if NPT4_PRIV is null or not\n",
+    "    \n",
+    "    If both null, output neither, include in list\n",
+    "    If one exists, it is either public or private\n",
+    "\"\"\"\n",
+    "\n"
    ]
   },
   {
