added latitude and longitude

--- a/new_data_csv_book.ipynb
+++ b/new_data_csv_book.ipynb
@@ -25,6 +25,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {
     "collapsed": true
@@ -46,7 +55,7 @@
     "              'PCIP43', 'PCIP44', 'PCIP45', 'PCIP46',\n",
     "              'PCIP47', 'PCIP48', 'PCIP49', 'PCIP50', 'PCIP51', 'PCIP52', 'PCIP54']\n",
     "\n",
-    "disp_categories = ['OPEID','INSTNM','CITY','STABBR', 'INSTURL', 'HIGHDEG']"
+    "disp_categories = ['OPEID','INSTNM','CITY','STABBR', 'INSTURL', 'HIGHDEG', 'LATITUDE', LON]"
    ]
   },
   {
