--- a/alg_finalized_1_1.ipynb
+++ b/alg_finalized_1_1.ipynb
@@ -4,12 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Below are the functions we user input through to get our finalized list of colleges."
+    "## College Finding Algorithm\n",
+    "\n",
+    "Below are the functions we user input through to get our finalized list of colleges. Initially we import our library pandas, and import the filtered dataset, new_data_csv_book.ipyn is the notebook that creates the filtered dataframe file. We also import the Dictionary that maps our majors to the respective column names from our dataframe for future use."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -17,42 +19,65 @@
    "source": [
     "import pandas as pd\n",
     "\n",
+    "# Import filtered college dataframe\n",
     "college = pd.read_csv('new_college.csv')\n",
+    "# Import key holding mapping between major column name and column description\n",
     "dictionary = pd.read_csv('CollegeScorecard_Raw_Data/CollegeScorecardDataDictionary-09-12-2015.csv')"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### General Reference List\n",
+    "\n",
+    "Below, we create a list that holds the index values for each college. In the csv imported, there are 7804 colleges each mapped from an index from 0 to 7803. Here we create a list that spans that range and the list allows us to explore through the pandas dataframe effectively later on."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "# Creating List allcollegelist to continuously refer back to\n",
+    "\n",
     "allcollegelist = []\n",
     "for i in range(len(college)):\n",
     "    allcollegelist.append(i)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Below are all the columns of the imported dataframe csv. They are divided up for convience, and are present for reference. They will not be extensively used below."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# Columns from datafram we will used, divided up into useful \n",
+    "# Columns from datafram we will used, divided up into useful sub lists\n",
     "\n",
-    "alg_categories = ['CONTROL', \n",
+    "# general columns used to filter out final college list \n",
+    "alg_categories = ['CONTROL', 'ADM_RATE',\n",
     "                  'SATVR25', 'SATVR75', 'SATMT25', 'SATMT75', 'SATWR25', 'SATWR75',\n",
     "                  'NPT4_PUB', 'NPT4_PRIV']\n",
     "\n",
+    "# racial proportions and total population columns used to filter out final college list\n",
     "alg_race = ['UGDS','UGDS_WHITE', 'UGDS_BLACK', 'UGDS_HISP', 'UGDS_ASIAN',\n",
     "            'UGDS_AIAN', 'UGDS_NHPI', 'UGDS_2MOR', 'UGDS_NRA', 'UGDS_UNKN',\n",
     "            'UGDS_WHITENH', 'UGDS_API', 'UGDS_API']\n",
     "\n",
+    "# major percentage at each school given in each columns\n",
+    "# each column is a specific major, mapped in the original dataset dictionary\n",
     "alg_majors = ['PCIP01', 'PCIP03', 'PCIP04', 'PCIP05', 'PCIP09', 'PCIP10', 'PCIP11',\n",
     "              'PCIP12', 'PCIP13', 'PCIP14', 'PCIP15', \n",
     "              'PCIP16', 'PCIP19', 'PCIP22', 'PCIP23', 'PCIP24', 'PCIP25', 'PCIP26', 'PCIP27',\n",
@@ -60,18 +85,28 @@
     "              'PCIP43', 'PCIP44', 'PCIP45', 'PCIP46',\n",
     "              'PCIP47', 'PCIP48', 'PCIP49', 'PCIP50', 'PCIP51', 'PCIP52', 'PCIP54']\n",
     "\n",
-    "disp_categories = ['OPEID','INSTNM','CITY','STABBR', 'INSTURL', 'HIGHDEG','ADM_RATE']"
+    "# columns kept in final csv, but used for just displaying info after college filter runs\n",
+    "disp_categories = ['OPEID','INSTNM','CITY','STABBR', 'INSTURL', 'HIGHDEG', 'LATITUDE', 'LONGITUDE']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Mapping Majors to Description\n",
+    "Below, we create a python dictionary from the csv file that maps information between the column name in the dataframe and the description of the column. We will allow users to type in desired majors, and will search through the descriptions to find hits."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "#creating a dictionary where the key is the major variable and the value is the label (name of the major)\n",
+    "# Created from the major column name to description map file\n",
     "dmajor = {}\n",
     "for i in range(len(dictionary)):\n",
     "    if str(dictionary.label[i]) != 'nan':\n",
@@ -79,8 +114,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Filtering Functions\n",
+    "\n",
+    "Below are functions that filter the list of colleges made above (allcollegelist) and narrows down subsequently. We initally put the allcollegelist in one function, and put the output into the next function and the next, and finally get the final recommended college list."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -242,8 +286,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Using the Algorithm\n",
+    "\n",
+    "Below we have an example run of the algorithm to get college recommendations. We run through each function, typing in our preferences. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -260,12 +313,27 @@
     }
    ],
    "source": [
+    "\"\"\"Test run of functions\"\"\"\n",
+    "\n",
+    "# Filter by SAT score\n",
     "college_list = sat(650,650,650,allcollegelist)\n",
+    "\n",
+    "# Filter by racial diversity\n",
     "college_list = diversity(\"low\", college_list)\n",
+    "\n",
+    "# Filter by public (1) or private (2) college or both (3)\n",
     "college_list = public_private(college_list, 2)\n",
+    "\n",
+    "# Filter by average tuition (including scholarships and financial aid)\n",
     "college_list = cost(college_list, 20000)\n",
+    "\n",
+    "# Filter by all desired majors separated by ';'\n",
     "college_list = major(\"engineering; english\",college_list)\n",
+    "\n",
+    "# Filter by maximum or minimum population\n",
     "college_list = pref_popul(10000, college_list, 'less')\n",
+    "\n",
+    "# Print out college names recommended\n",
     "for i in college_list:\n",
     "        print college['INSTNM'][i]"
    ]
